--- a/css/index.css
+++ b/css/index.css
@@ -5,10 +5,59 @@
     margin-top: 10px;
 }
 .focus {
+    position: relative;
     float: left;
     width: 721px;
     height: 455px;
     background-color: purple;
+    overflow: hidden;
+    cursor: pointer;
+}
+.focus ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 600%;
+}
+.focus ul li {
+    float: left;
+}
+.arrow-l,.arrow-r {
+    display: none;
+    position: absolute;
+    top: 205px;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    text-align: center;
+    line-height: 40px;
+    background: rgba(0, 0, 0, .3);
+    z-index: 2;
+}
+.arrow-l {
+    left: 0;
+    border-radius: 0 20px 20px 0;
+}
+.arrow-r {
+    right: 0;
+    border-radius: 20px 0 0 20px;
+}
+.current {
+    background: white;
+}
+.circle {
+    position: absolute;
+    bottom: 10px;
+    left: 330px;
+}
+.circle li {
+    float: left;
+    width: 8px;
+    height: 8px;
+    border: 2px solid rgba(255, 255, 255, .5);
+    margin: 0 3px;
+    border-radius: 50%;
+    cursor: pointer;
 }
 .newsflash {
     float: right;
@@ -74,6 +123,21 @@
 }
 .bargain {
     margin-top: 5px;
+}
+.sliderbar {
+    position: absolute;
+    top: 300px;
+    right: 60px;
+    width: 100px;
+    background: rgb(235, 235, 235);
+}
+.sliderbar ul li {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+}
+.goback {
+    display: none;
 }
 .recom {
     height: 163px;
